style: 체크스타일 수정 및 테스트 코드에서 command 제거